src/antlr/grammar_dbParser.py
# Generated from grammar_db.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class grammar_dbParser ( Parser ):

    grammarFileName = "grammar_db.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'connect'", "'to'", "'select'", "'from'", 
                     "'namedPattern'", "'intersect'", "'query'", "'start'", 
                     "'final'", "'for'", "'edges'", "'count'", "'filter'", 
                     "'term'", "'nonterm'", "'range'", "'none'", "'isEquel'", 
                     "'isStart'", "'isFinal'", "'and'", "'or'", "'not'", 
                     "'|'", "'?'", "'+'", "'*'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ALT", "OPTION", "PLUS", "STAR", "NUM", "INTS", "NAME", 
                      "WS" ]

    RULE_script = 0
    RULE_stmt = 1
    RULE_graph = 2
    RULE_expr = 3
    RULE_patterns = 4
    RULE_pattern = 5
    RULE_cond = 6
    RULE_vertices = 7
    RULE_bool1 = 8

    ruleNames =  [ "script", "stmt", "graph", "expr", "patterns", "pattern", 
                   "cond", "vertices", "bool1" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    ALT=24
    OPTION=25
    PLUS=26
    STAR=27
    NUM=28
    INTS=29
    NAME=30
    WS=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ScriptContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammar_dbParser.StmtContext)
            else:
                return self.getTypedRuleContext(grammar_dbParser.StmtContext,i)


        def getRuleIndex(self):
            return grammar_dbParser.RULE_script

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScript" ):
                listener.enterScript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScript" ):
                listener.exitScript(self)




    def script(self):

        localctx = grammar_dbParser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_script)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << grammar_dbParser.T__0) | (1 << grammar_dbParser.T__2) | (1 << grammar_dbParser.T__4))) != 0):
                self.state = 18
                self.stmt()
                self.state = 23
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(grammar_dbParser.NAME, 0)

        def expr(self):
            return self.getTypedRuleContext(grammar_dbParser.ExprContext,0)


        def graph(self):
            return self.getTypedRuleContext(grammar_dbParser.GraphContext,0)


        def pattern(self):
            return self.getTypedRuleContext(grammar_dbParser.PatternContext,0)


        def getRuleIndex(self):
            return grammar_dbParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = grammar_dbParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 35
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [grammar_dbParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 24
                self.match(grammar_dbParser.T__0)
                self.state = 25
                self.match(grammar_dbParser.T__1)
                self.state = 26
                self.match(grammar_dbParser.NAME)
                pass
            elif token in [grammar_dbParser.T__2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 27
                self.match(grammar_dbParser.T__2)
                self.state = 28
                self.expr()
                self.state = 29
                self.match(grammar_dbParser.T__3)
                self.state = 30
                self.graph(0)
                pass
            elif token in [grammar_dbParser.T__4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 32
                self.match(grammar_dbParser.T__4)
                self.state = 33
                self.match(grammar_dbParser.NAME)
                self.state = 34
                self.pattern(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GraphContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(grammar_dbParser.NAME, 0)

        def pattern(self):
            return self.getTypedRuleContext(grammar_dbParser.PatternContext,0)


        def vertices(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammar_dbParser.VerticesContext)
            else:
                return self.getTypedRuleContext(grammar_dbParser.VerticesContext,i)


        def graph(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammar_dbParser.GraphContext)
            else:
                return self.getTypedRuleContext(grammar_dbParser.GraphContext,i)


        def getRuleIndex(self):
            return grammar_dbParser.RULE_graph

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGraph" ):
                listener.enterGraph(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGraph" ):
                listener.exitGraph(self)



    def graph(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = grammar_dbParser.GraphContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_graph, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [grammar_dbParser.NAME]:
                self.state = 38
                self.match(grammar_dbParser.NAME)
                pass
            elif token in [grammar_dbParser.T__6]:
                self.state = 39
                self.match(grammar_dbParser.T__6)
                self.state = 40
                self.pattern(0)
                pass
            elif token in [grammar_dbParser.T__7]:
                self.state = 41
                self.match(grammar_dbParser.T__7)
                self.state = 42
                self.vertices()
                self.state = 43
                self.match(grammar_dbParser.T__8)
                self.state = 44
                self.vertices()
                self.state = 45
                self.match(grammar_dbParser.T__9)
                self.state = 46
                self.graph(1)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 55
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = grammar_dbParser.GraphContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_graph)
                    self.state = 50
                    if not self.precpred(self._ctx, 3):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                    self.state = 51
                    self.match(grammar_dbParser.T__5)
                    self.state = 52
                    self.graph(4) 
                self.state = 57
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cond(self):
            return self.getTypedRuleContext(grammar_dbParser.CondContext,0)


        def expr(self):
            return self.getTypedRuleContext(grammar_dbParser.ExprContext,0)


        def getRuleIndex(self):
            return grammar_dbParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = grammar_dbParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr)
        try:
            self.state = 65
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [grammar_dbParser.T__10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.match(grammar_dbParser.T__10)
                pass
            elif token in [grammar_dbParser.T__11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.match(grammar_dbParser.T__11)
                self.state = 60
                self.match(grammar_dbParser.T__10)
                pass
            elif token in [grammar_dbParser.T__12]:
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self.match(grammar_dbParser.T__12)
                self.state = 62
                self.cond()
                self.state = 63
                self.expr()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PatternsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pattern(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammar_dbParser.PatternContext)
            else:
                return self.getTypedRuleContext(grammar_dbParser.PatternContext,i)


        def ALT(self):
            return self.getToken(grammar_dbParser.ALT, 0)

        def getRuleIndex(self):
            return grammar_dbParser.RULE_patterns

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPatterns" ):
                listener.enterPatterns(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPatterns" ):
                listener.exitPatterns(self)




    def patterns(self):

        localctx = grammar_dbParser.PatternsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_patterns)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.pattern(0)
            self.state = 68
            self.match(grammar_dbParser.ALT)
            self.state = 69
            self.pattern(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PatternContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(grammar_dbParser.NAME, 0)

        def pattern(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammar_dbParser.PatternContext)
            else:
                return self.getTypedRuleContext(grammar_dbParser.PatternContext,i)


        def STAR(self):
            return self.getToken(grammar_dbParser.STAR, 0)

        def PLUS(self):
            return self.getToken(grammar_dbParser.PLUS, 0)

        def ALT(self):
            return self.getToken(grammar_dbParser.ALT, 0)

        def OPTION(self):
            return self.getToken(grammar_dbParser.OPTION, 0)

        def patterns(self):
            return self.getTypedRuleContext(grammar_dbParser.PatternsContext,0)


        def getRuleIndex(self):
            return grammar_dbParser.RULE_pattern

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPattern" ):
                listener.enterPattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPattern" ):
                listener.exitPattern(self)



    def pattern(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = grammar_dbParser.PatternContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_pattern, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(grammar_dbParser.T__13)
            self.state = 73
            self.match(grammar_dbParser.NAME)
            self._ctx.stop = self._input.LT(-1)
            self.state = 96
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 94
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        localctx = grammar_dbParser.PatternContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_pattern)
                        self.state = 75
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 76
                        self.match(grammar_dbParser.STAR)
                        self.state = 77
                        self.pattern(6)
                        pass

                    elif la_ == 2:
                        localctx = grammar_dbParser.PatternContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_pattern)
                        self.state = 78
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 79
                        self.match(grammar_dbParser.PLUS)
                        self.state = 80
                        self.pattern(5)
                        pass

                    elif la_ == 3:
                        localctx = grammar_dbParser.PatternContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_pattern)
                        self.state = 81
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 82
                        self.match(grammar_dbParser.ALT)
                        self.state = 83
                        self.pattern(0)
                        self.state = 84
                        self.pattern(4)
                        pass

                    elif la_ == 4:
                        localctx = grammar_dbParser.PatternContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_pattern)
                        self.state = 86
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 87
                        self.match(grammar_dbParser.OPTION)
                        self.state = 88
                        self.pattern(2)
                        pass

                    elif la_ == 5:
                        localctx = grammar_dbParser.PatternContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_pattern)
                        self.state = 89
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 90
                        self.match(grammar_dbParser.T__14)
                        self.state = 91
                        self.match(grammar_dbParser.NAME)
                        pass

                    elif la_ == 6:
                        localctx = grammar_dbParser.PatternContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_pattern)
                        self.state = 92
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 93
                        self.patterns()
                        pass

             
                self.state = 98
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class CondContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(grammar_dbParser.NAME)
            else:
                return self.getToken(grammar_dbParser.NAME, i)

        def bool1(self):
            return self.getTypedRuleContext(grammar_dbParser.Bool1Context,0)


        def getRuleIndex(self):
            return grammar_dbParser.RULE_cond

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCond" ):
                listener.enterCond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCond" ):
                listener.exitCond(self)




    def cond(self):

        localctx = grammar_dbParser.CondContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cond)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(grammar_dbParser.NAME)
            self.state = 100
            self.match(grammar_dbParser.NAME)
            self.state = 101
            self.match(grammar_dbParser.NAME)
            self.state = 102
            self.bool1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VerticesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTS(self):
            return self.getToken(grammar_dbParser.INTS, 0)

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(grammar_dbParser.NUM)
            else:
                return self.getToken(grammar_dbParser.NUM, i)

        def getRuleIndex(self):
            return grammar_dbParser.RULE_vertices

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVertices" ):
                listener.enterVertices(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVertices" ):
                listener.exitVertices(self)




    def vertices(self):

        localctx = grammar_dbParser.VerticesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_vertices)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [grammar_dbParser.INTS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(grammar_dbParser.INTS)
                pass
            elif token in [grammar_dbParser.T__15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(grammar_dbParser.T__15)
                self.state = 106
                self.match(grammar_dbParser.T__3)
                self.state = 107
                self.match(grammar_dbParser.NUM)
                self.state = 108
                self.match(grammar_dbParser.T__1)
                self.state = 109
                self.match(grammar_dbParser.NUM)
                pass
            elif token in [grammar_dbParser.T__16]:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.match(grammar_dbParser.T__16)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bool1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(grammar_dbParser.NAME)
            else:
                return self.getToken(grammar_dbParser.NAME, i)

        def bool1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammar_dbParser.Bool1Context)
            else:
                return self.getTypedRuleContext(grammar_dbParser.Bool1Context,i)


        def getRuleIndex(self):
            return grammar_dbParser.RULE_bool1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool1" ):
                listener.enterBool1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool1" ):
                listener.exitBool1(self)




    def bool1(self):

        localctx = grammar_dbParser.Bool1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_bool1)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(grammar_dbParser.T__17)
                self.state = 115
                self.match(grammar_dbParser.NAME)
                self.state = 116
                self.match(grammar_dbParser.NAME)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 117
                self.match(grammar_dbParser.T__18)
                self.state = 118
                self.match(grammar_dbParser.NAME)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 119
                self.match(grammar_dbParser.T__19)
                self.state = 120
                self.match(grammar_dbParser.NAME)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 121
                self.match(grammar_dbParser.T__20)
                self.state = 122
                self.bool1()
                self.state = 123
                self.bool1()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 125
                self.match(grammar_dbParser.T__21)
                self.state = 126
                self.bool1()
                self.state = 127
                self.bool1()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 129
                self.match(grammar_dbParser.T__22)
                self.state = 130
                self.bool1()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[2] = self.graph_sempred
        self._predicates[5] = self.pattern_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def graph_sempred(self, localctx:GraphContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 3)
         

    def pattern_sempred(self, localctx:PatternContext, predIndex:int):
            if predIndex == 1:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 3)
         

            if predIndex == 4:
                return self.precpred(self._ctx, 1)
         

            if predIndex == 5:
                return self.precpred(self._ctx, 6)
         

            if predIndex == 6:
                return self.precpred(self._ctx, 2)
         




